@@ -30,7 +30,7 @@ RUBY_FORGE_USER    = "webster132"
 
 BASE_DIRS   = %w( 
   app config/environments components db doc log lib lib/tasks public script script/performance script/process test vendor vendor/plugins
-  tmp/sessions tmp/cache tmp/sockets
+  tmp/sessions tmp/cache tmp/sockets tmp/pids
 )
 
 APP_DIRS    = %w( models controllers helpers views views/layouts )
