@@ -7,6 +7,7 @@ server.port = 3000
 server.modules           = ( "mod_rewrite", "mod_accesslog", "mod_fastcgi", "mod_compress", "mod_expire" )
 
 server.error-handler-404 = "/dispatch.fcgi"
+server.pid-file          = CWD + "/tmp/pids/lighttpd.pid"
 server.document-root     = CWD + "/public/"
 
 server.errorlog          = CWD + "/log/lighttpd.error.log"
